--- a/style.css
+++ b/style.css
@@ -9,3 +9,7 @@ Author URI:         http://benword.com/
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
 */
+
+body {
+	background: tomato;
+}
